--- a/app/views/movies/index.html.erb
+++ b/app/views/movies/index.html.erb
@@ -1,5 +1,26 @@
-<!--  This file is app/views/movies/index.html.erb -->
-<h2>All Movies</h2>
+<h1>All Movies</h1>
+
+<%= form_tag movies_path, method: :get, id: 'ratings_form', local: true do %>
+  Include:
+  <% @all_ratings.each do |rating| %>
+    <div class="form-check form-check-inline">
+      <%= check_box_tag "ratings[#{rating}]", "1",
+            @ratings_to_show.include?(rating), id: "ratings_#{rating}" %>
+      <%= label_tag "ratings[#{rating}]", rating, class: 'form-check-label' %>
+    </div>
+  <% end %>
+
+  <div class="mt-2">
+    <label class="form-label me-2" for="sort_by">Sort by:</label>
+    <%= select_tag :sort_by,
+          options_for_select([["Title", "title"], ["Release date", "release_date"]], @sort_by),
+          id: 'sort_by',
+          class: 'form-select d-inline w-auto' %>
+
+    <%= submit_tag 'Refresh', id: 'ratings_submit', class: 'btn btn-primary ms-2' %>
+  </div>
+<% end %>
+
 
 <div id="movies">
   <% @movies.each do |movie| %>
